# megabrain-market

./: .env.example  .impeccable.md  .vercelignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.digest-notifications  Dockerfile.publish-bootstrap-tiers  Makefile  README.md  README.pt-BR.md  README.zh-CN.md  SECURITY.md  SELF_HOSTING.md  compound-engineering.local.md  docker-compose.yml  embed.html  index.html  live-channels.html  mcp-grant.html  middleware.ts  package-lock.json  package.json  server.json  settings.html  vercel.json  vite.config.ts
.github/: pull_request_template.md
.husky/: pre-push
api/: _agent-metadata.ts  _agent-tool-suggest.ts  _api-key.js  _api-key.test.mjs  _bootstrap-r2.js  _bootstrap-tier-keys.js  _client-ip.js  _convex-error.js  _cors.js  _cors.test.mjs  _github-release.js  _notification-webhook-ssrf.ts  _oauth-token.js  _rate-limit.js  _rate-limit.test.mjs  _usage-telemetry.js  _user-api-key.js  _user-api-key.test.mjs  a2a.ts  agent-auth.ts  api-route-exceptions.json  ask.ts  bootstrap-auth.test.mjs  bootstrap-cors.test.mjs  bootstrap.js  chat-analyst.ts  create-checkout.ts  download.js  fwdstart.js  health-cors.test.mjs  health.js  http-message-signatures-directory.ts  latest-brief.ts  mcp-proxy.ts  mcp.ts  not-found.ts  notification-channels.ts  notify.ts  oauth-authorization-server.ts  oauth-protected-resource.ts  (+16 more)
blog-site/: astro.config.mjs
cli/: README.md  package.json
consumer-prices-core/: .env.example  Dockerfile
convex/: apiKeys.ts  apiPlanLimitEmails.ts  apiPlanLimitNotices.ts  apiPlanLimitUsage.ts  contactMessages.ts  crons.ts  http.ts  mcpProTokens.ts  resendWebhookHandler.ts  schema.ts
docker/: Dockerfile  docker-entrypoint.sh  entrypoint.sh  nginx-security-headers.conf  nginx.conf  nginx.conf.template  runtime-package-lock.json  runtime-package.json  supervisord.conf
docs/: COMMUNITY-PROMOTION-GUIDE.md  DEPLOYMENT-PLAN.md  PRESS_KIT.md  about.mdx  accounts.mdx  adding-endpoints.mdx  agent-discovery.mdx  agent-skills.mdx  algorithms.mdx  (+65 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/worldmonitor_sdk/: __init__.py
sdk/python/tests/: test_client.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.finance.conf.json  tauri.tech.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: local-api-server.mjs  local-api-server.test.mjs
src-tauri/src/: main.rs
(+2024 files in other folders)
